# MyLittleGameEngine

./: .gitignore  CMakeLists.txt  README.md
Include/Editor/: EditorLayer.h  Viewport.h
Include/Editor/AttachableWindows/: DefaultAttachableIMGUIWindows.h
Include/Editor/EditorCommands/: EditorCommand.h  EditorCommandManager.h
Include/Editor/Viewport/: Viewport.h
Include/Editor/Viewport/EditorStates/: EntitySelector.h
Include/GameLayer/: GameLayer.h  TestGameLayer.h
Include/GameLayer/AttachableWindows/: DefaultAttachableIMGUIWindows.h  SceneManagerWindow.h
Include/GameLayer/GameScenes/: GameScene.h
Include/HCLogs/: ImGuiLogger.h  Logger.h
Include/Platform/: App.h  Assertion.h  FileIO.h  Interface.h  ResourceManager.h
Include/Platform/AssetManager/: Asset.h  AssetManager.h  AssetOf.h  SceneAsset.h  ShaderAsset.h  StaticMeshAsset.h  TextureAsset.h
Include/Platform/Components/: CameraComponent.h  LightSourceComponent.h  PlayerControllerComponent.h  RendererComponent.h  RotationComponent.h  TransformComponent.h
Include/Platform/ECS/: Component.h  Entity.h
Include/Platform/Event/: Event.h  IEvent.h  ReadOnlyEvent.h
Include/Platform/FileSystem/: Directory.h  File.h  FileDirectoryVariant.h  FileSystem.h
Include/Platform/Inputs/: Input.h  InputManager.h  Inputs.h
Include/Platform/Properties/: Color.h
Include/Platform/Reflection/: Class.h  HCClass.h  HCObject.h  IReflectable.h  Property.h  ReflexionMacro.h
Include/Platform/Renderer/: LayoutElement.h  Mesh.h  Model.h  Renderer.h  Texture.h  Vertex.h
Include/Platform/Scenes/: Scene.h  SceneManager.h  SceneResource.h
Include/Platform/Utils/: CircularBuffer.h  PtrUtils.h  ShaderUtils.h  Time.h
Include/Platform/Window/: AttachableIMGUIWindow.h  BaseWindow.h  GLFWWindow.h  IImGuiWindow.h
Resources/Configs/: Config.conf
Resources/Scenes/: Premiere scene wouhou.hcscene  Root (GameScene2).hcscene
Resources/Shaders/: defaultShader.hcshader  fragment.glsl  lightSource.hcshader  otherShader.hcshader  vertex.glsl  wave.hcshader
Src/Editor/: EditorLayer.cpp
Src/Editor/AttachableWindows/: DefaultAttachableIMGUIWindow.cpp  SceneManagerWindow.cpp
Src/Editor/EditorCommands/: EditorCommandManager.cpp
Src/GameLayer/: GameLayer.cpp  TestGameLayer.cpp
Src/GameLayer/AttachableWindows/: DefaultAttachableIMGUIWindow.cpp  SceneManagerWindow.cpp
Src/GameLayer/GameScenes/: GameScene.cpp
Src/HCLogs/: Logger.cpp
Src/Platform/: App.cpp  FileIO.cpp  main.cpp
Src/Platform/AssetManager/: Asset.cpp  AssetManager.cpp  StaticMeshAsset.cpp
Src/Platform/Components/: LightSourceComponent.cpp  PlayerControllerComponent.cpp  RendererComponent.cpp
Src/Platform/ECS/: Component.cpp
Src/Platform/FileSystem/: Directory.cpp  File.cpp  FileDirectoryVariant.cpp  FileSystem.cpp
Src/Platform/Inputs/: Input.cpp  InputManager.cpp  Inputs.cpp
Src/Platform/Reflection/: HCObject.cpp  IReflectable.cpp  Property.cpp
Src/Platform/Renderer/: CameraComponent.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Texture.cpp
Src/Platform/Scenes/: Scene.cpp  SceneManager.cpp
Src/Platform/Window/: BaseWindow.cpp  GLFWWindow.cpp
(+49 files in other folders)
